ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error5.asc
//

function f(){
       function f(){}
       function f(){}	//Error: Collision with function named 'f' defined at line 4
}
